--- a/Assets/UI/BallLauncherUI.uxml
+++ b/Assets/UI/BallLauncherUI.uxml
@@ -2,17 +2,18 @@
     <Style src="project://database/Assets/UI/BallLauncherUI.uss?fileID=7433441132597879392&amp;guid=148c7d057803cc7449b921788a75976e&amp;type=3#BallLauncherUI" />
     <ui:VisualElement style="transform-origin: center; translate: 0 0; align-items: center; margin-top: auto; margin-bottom: auto;">
         <ui:VisualElement name="background" style="width: 500px;">
-            <ui:Slider label="Speed" value="42" high-value="100" name="speed" low-value="5" show-input-field="true" focusable="false" class="slider" />
-            <ui:Slider label="Fire Rate" value="42" high-value="100" name="fireRate" low-value="1" focusable="false" show-input-field="true" class="slider" />
-            <ui:Slider label="Radius" value="42" high-value="1" name="radius" low-value="0.02" show-input-field="true" focusable="false" class="slider" />
-            <ui:Slider label="Density" value="42" high-value="100" name="density" low-value="1" show-input-field="true" focusable="false" class="slider" />
-            <ui:Slider label="Top Spin" value="0" high-value="100" name="topSpin" low-value="-100" show-input-field="true" focusable="false" class="slider" />
-            <ui:Slider label="Side Spin" value="0" high-value="100" name="sideSpin" low-value="-100" show-input-field="true" focusable="false" class="slider" />
-            <ui:Slider label="Magnus Lift" value="42" high-value="1" name="magnusLift" low-value="0" show-input-field="true" focusable="false" class="slider" />
-            <ui:Slider label="Elasticity" value="42" high-value="1" name="elasticity" low-value="0" show-input-field="true" focusable="false" class="slider" />
-            <ui:Slider label="Air Drag Trans." value="42" high-value="5" name="airDrag" low-value="0" show-input-field="true" focusable="false" class="slider" />
-            <ui:Slider label="Air Drag Rot." value="42" high-value="100" name="rotAirDrag" low-value="0" show-input-field="true" focusable="false" class="slider" />
-            <ui:Slider label="Surface Friction" value="42" high-value="5" name="surfaceFriction" low-value="0" show-input-field="true" focusable="false" class="slider" />
+            <ui:Slider label="Fire Rate" value="42" high-value="100" name="fireRate" low-value="1" focusable="false" show-input-field="false" class="slider" />
+            <ui:Slider label="Speed" value="42" high-value="100" name="speed" low-value="5" show-input-field="false" focusable="false" class="slider" />
+            <ui:Slider label="Radius" value="42" high-value="1" name="radius" low-value="0.02" show-input-field="false" focusable="false" class="slider" />
+            <ui:Slider label="Density" value="42" high-value="100" name="density" low-value="1" show-input-field="false" focusable="false" class="slider" />
+            <ui:Slider label="Elasticity" value="42" high-value="1" name="elasticity" low-value="0" show-input-field="false" focusable="false" class="slider" />
+            <ui:Slider label="Skin Friction" value="42" high-value="5" name="surfaceFriction" low-value="0" show-input-field="false" focusable="false" class="slider" />
+            <ui:Slider label="Top Spin" value="0" high-value="100" name="topSpin" low-value="-100" show-input-field="false" focusable="false" class="slider" />
+            <ui:Slider label="Side Spin" value="0" high-value="100" name="sideSpin" low-value="-100" show-input-field="false" focusable="false" class="slider" />
+            <ui:Slider label="Magnus Lift" value="42" high-value="1" name="magnusLift" low-value="0" show-input-field="false" focusable="false" class="slider" />
+            <ui:Slider label="Air Drag Lin." value="42" high-value="5" name="airDrag" low-value="0" show-input-field="false" focusable="false" class="slider" />
+            <ui:Slider label="Air Drag Rot." value="42" high-value="100" name="rotAirDrag" low-value="0" show-input-field="false" focusable="false" class="slider" />
+            <ui:Button text="RESET&#10;" display-tooltip-when-elided="true" name="reset" focusable="false" style="font-size: 20px; -unity-text-align: middle-center; -unity-font-style: normal; padding-top: 32px; height: 30px; width: 200px; margin-left: auto; margin-right: auto; margin-top: 70px; border-top-left-radius: 5px; border-bottom-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; background-color: rgba(0, 0, 0, 0.81);" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
